// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Toolbar > should render all buttons when all features are enabled 1`] = `
<div
  class="Toolbar-root"
>
  <div>
    <button
      title="Add files"
    >
      "Add" popover
    </button>
  </div>
  <button
    title="Get files"
  >
    <div>
      "Get" popover
    </div>
  </button>
  <span
    class="MuiBadge-root"
  >
    <button
      title="Organize"
    >
      "Organize" popover
    </button>
    <span
      class="MuiBadge-badge Toolbar-badge MuiBadge-anchorOriginTopRightRectangle MuiBadge-colorPrimary MuiBadge-invisible"
    >
      0
    </span>
  </span>
  <button
    title="Create package"
  >
    "Create package" popover
  </button>
</div>
`;

exports[`Toolbar > should render buttons for enabled features: add, organize 1`] = `
<div
  class="Toolbar-root"
>
  <div>
    <button
      title="Add files"
    >
      "Add" popover
    </button>
  </div>
  <span
    class="MuiBadge-root"
  >
    <button
      title="Organize"
    >
      "Organize" popover
    </button>
    <span
      class="MuiBadge-badge Toolbar-badge MuiBadge-anchorOriginTopRightRectangle MuiBadge-colorPrimary MuiBadge-invisible"
    >
      0
    </span>
  </span>
</div>
`;

exports[`Toolbar > should render nothing when all features are disabled 1`] = `
<div
  class="Toolbar-root"
/>
`;

exports[`Toolbar > should render skeleton buttons when features is null 1`] = `
<div
  class="Toolbar-root"
>
  <i>
    ⌛
  </i>
  <i>
    ⌛
  </i>
</div>
`;
